fix: code block to not overflow

--- a/styles/markdown.module.css
+++ b/styles/markdown.module.css
@@ -2,6 +2,9 @@
 .wmde-markdown {
   @apply bg-transparent;
 
+  @apply whitespace-pre-wrap;
+  @apply text-wrap;
+
   @media (max-width: 1440px) {
     @apply text-[14px];
   }
@@ -27,6 +30,8 @@
   .wmde-markdown {
     * {
       font-size: 16px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
       @media (max-width: 1440px) {
         @apply text-[15px];
       }
